<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dip"
            android:stretchColumns="0" >

            <TableRow>

                <TextView android:text="@string/lbl_level" />

                <EditText
                    android:id="@+id/fld_level"
                    android:editable="false"
                    android:gravity="right"
                    android:text="1" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/lbl_magicka" />

                <EditText
                    android:id="@+id/fld_magicka"
                    android:editable="false"
                    android:gravity="right"
                    android:text="100" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/lbl_health" />

                <EditText
                    android:id="@+id/fld_health"
                    android:editable="false"
                    android:gravity="right"
                    android:text="100" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/lbl_stamina" />

                <EditText
                    android:id="@+id/fld_stamina"
                    android:editable="false"
                    android:gravity="right"
                    android:text="100" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_levelup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_levelup" />

        <Button
            android:id="@+id/btn_undo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/lbl_undo" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_reset" />
    </LinearLayout>

</ScrollView>